[gd_scene load_steps=17 format=3 uid="uid://by7tqp72mpn2f"]

[ext_resource type="Script" uid="uid://kctelgqtvonw" path="res://Scenes/MainMenu/Scripts/MainMenu.gd" id="1_e1xpn"]
[ext_resource type="Theme" uid="uid://djopgy1a0qxka" path="res://Scenes/MainMenu/Theme/MenuTheme.tres" id="1_tma8a"]
[ext_resource type="Texture2D" uid="uid://0av7meevi7r1" path="res://Assets/Screenshot_20250812_114606.png" id="3_t4xtq"]
[ext_resource type="Shader" uid="uid://cirolil5iq67l" path="res://Scenes/MainMenu/Shaders/Background.gdshader" id="3_tpenk"]
[ext_resource type="AudioStream" uid="uid://cd74muqbnjqtb" path="res://Scenes/MainMenu/Audio/Night Break.mp3" id="4_b4ika"]
[ext_resource type="Script" uid="uid://dqe7imqd76k5i" path="res://Scripts/cylinder.gd" id="4_qxrut"]
[ext_resource type="FontFile" uid="uid://b1qnask4xa6p2" path="res://Scenes/MainMenu/Fonts/Fiorello CG Condensed Regular.otf" id="5_ve1ib"]
[ext_resource type="AudioStream" uid="uid://bouadfgtppss7" path="res://Scenes/MainMenu/UI AUDIO/529123__mattruthsound__chair-straining-under-stress-percussion.wav" id="6_1b8fn"]
[ext_resource type="Shader" uid="uid://bd3f84fyfi7fm" path="res://Scenes/MainMenu/Shaders/BlacklucktitleVARIABLE.gdshader" id="6_t4xtq"]
[ext_resource type="PackedScene" uid="uid://d1a3navgfevsn" path="res://Scenes/settings_menu.tscn" id="8_qxrut"]
[ext_resource type="Shader" uid="uid://dfvihl7peqgch" path="res://Assets/Shaders/crt_effect.gdshader" id="10_nixa7"]
[ext_resource type="Script" uid="uid://cw4twseba12np" path="res://Scenes/MainMenu/Scripts/options_button.gd" id="12_qxrut"]
[ext_resource type="Texture2D" uid="uid://csut1hjmdqoso" path="res://Assets/jijijjagrrrrr.png" id="12_t4xtq"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_t4xtq"]
shader = ExtResource("10_nixa7")
shader_parameter/brightnessMult = 4.0
shader_parameter/wiggleMult = 0.0015
shader_parameter/chromaticAberrationOffset = 0.001
shader_parameter/warp_amount = 0.555
shader_parameter/vignette_amount = 0.483
shader_parameter/vignette_radius = 0.7

[sub_resource type="ShaderMaterial" id="ShaderMaterial_exbqw"]
shader = ExtResource("3_tpenk")
shader_parameter/spin_rotation_speed = 2.0
shader_parameter/move_speed = 7.0
shader_parameter/offset = Vector2(0, 0)
shader_parameter/colour_1 = Color(0.7, 0, 0, 1)
shader_parameter/colour_2 = Color(0.1, 0, 0, 1)
shader_parameter/colour_3 = Color(0, 0, 0, 1)
shader_parameter/contrast = 3.5
shader_parameter/lighting = 0.4
shader_parameter/spin_amount = 0.25
shader_parameter/pixel_filter = 740.0
shader_parameter/is_rotating = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8k6ko"]
shader = ExtResource("6_t4xtq")
shader_parameter/noise_scale = 80.0
shader_parameter/darkness = 0.0
shader_parameter/glitch_strength = 0.01
shader_parameter/time_slowdown = 2.5
shader_parameter/glitch_start_time = 1.0
shader_parameter/glitch_ramp_duration = 2.0
shader_parameter/tint = Color(1, 1, 1, 1)

[node name="MainMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
theme = ExtResource("1_tma8a")
script = ExtResource("1_e1xpn")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 0

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
process_mode = 4
z_index = 4096
material = SubResource("ShaderMaterial_t4xtq")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
mouse_force_pass_scroll_events = false
metadata/_edit_use_anchors_ = true

[node name="CanvasLayer" type="CanvasLayer" parent="CanvasLayer"]

[node name="jijijagrrr" type="Sprite2D" parent="CanvasLayer/CanvasLayer"]
z_index = 4096
position = Vector2(960, 540)
texture = ExtResource("12_t4xtq")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_exbqw")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayButton" type="Button" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_8k6ko")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -771.0
offset_top = -240.0
offset_right = 771.0
offset_bottom = 240.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_tma8a")
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0.458824, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_ve1ib")
theme_override_font_sizes/font_size = 490
text = "BLACKLUCK"
icon_alignment = 1

[node name="OptionsPanel" parent="." instance=ExtResource("8_qxrut")]
visible = false
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[node name="MenuMusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_b4ika")
volume_db = -13.87
autoplay = true
bus = &"Music"
parameters/looping = true

[node name="ClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_1b8fn")
bus = &"SFX"

[node name="Cylinder" type="Sprite2D" parent="."]
z_index = 4096
position = Vector2(960, 976)
scale = Vector2(0.364326, 0.364326)
texture = ExtResource("3_t4xtq")
script = ExtResource("4_qxrut")

[node name="OptionsButton" type="Button" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.467188
anchor_top = 0.844445
anchor_right = 0.532921
anchor_bottom = 0.963056
offset_right = 474.79
offset_bottom = 481.9
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(0.21, 0.21)
theme_override_colors/font_color = Color(0.46, 0.046, 0.046, 1)
theme_override_font_sizes/font_size = 56
script = ExtResource("12_qxrut")
metadata/_edit_use_anchors_ = true

[connection signal="mouse_entered" from="OptionsButton" to="OptionsButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="OptionsButton" to="OptionsButton" method="_on_mouse_exited"]
